--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+body {
+    background: rgb(54, 54, 54);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.widget-wrapper {
+    background: rgb(240, 240, 240);
+    margin: 20px;
+    padding: 20px;
+    border-radius: 3px;
+    box-shadow: 2px 2px 6px rgb(22, 22, 22);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.widget-header {
+    margin-bottom: 10px;
+    border-bottom: solid thin lightgray;
+    padding-bottom: 10px;
 }
